kubernetes/apps/downloads/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: downloads
  labels:
    kustomize.toolkit.fluxcd.io/prune: disabled
    vpn.home.arpa/routed-gateway: "true"
